FIX dynamic deploy of unavailable metamodel version
[skip ci]

Co-authored-by: Enrico Persiani <enrico.persiani@metatis.com>